Connections are stored in a Db...

--- a/NotifyMe/appsettings.json
+++ b/NotifyMe/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "{Some connection string}"
   },
   "Logging": {
     "LogLevel": {
@@ -8,8 +8,12 @@
     }
   },
   "AllowedHosts": "*",
+  "HostUser": {
+    "Image": "http://www.minepla.net/wp-content/uploads/IMG_7264.jpg",
+    "Name": "A"
+  },
   "TwitterAPI": {
-    "ConsumerKey": "",
-    "ConsumerSecret": ""
+    "ConsumerKey": "{Don't forget your API key}",
+    "ConsumerSecret": "{sshhhhhh so secret...}"
   }
 }
