--- a/NotifyMe.Solution/NotifyMe/bundleconfig.json
+++ b/NotifyMe.Solution/NotifyMe/bundleconfig.json
@@ -17,6 +17,12 @@
     ]
   },
   {
+    "outputFileName": "wwwroot/js/component.min.js",
+    "inputFiles": [
+      "wwwroot/js/component.js"
+    ]
+  },
+  {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js"
